--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,15 @@
   background-color: var(--bg-color);
   color: var(--white-color);
 }
+.menu-btn {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  z-index: 3;
+  color: white;
+  display: none;
+  position: fixed;
+}
 
 .skills-head {
   padding-top: 20px;
@@ -108,7 +117,6 @@
 .card {
   background-color: var(--bg-color);
   border-radius: 40px;
- 
 }
 
 .card-text {
@@ -156,7 +164,7 @@
   display: inline-block;
   margin-top: 20px;
 }
-.languages-logo  {
+.languages-logo {
   display: flex;
   justify-content: center;
 }
@@ -185,17 +193,17 @@
   justify-content: start;
   align-items: center;
 }
-
-.brands img {
-  height: 40px;
-  margin-top: 20px;
-}
 .brands {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
 }
+.brands img {
+  height: 40px;
+  margin-top: 20px;
+}
+
 .upskill {
-  margin-top: 4rem;
+  margin-top: 2rem;
 }
 
 .upskill a {
@@ -230,7 +238,6 @@
   color: var(--white-color);
   padding: 50px;
 }
-
 
 .percentages img {
   width: 200px;
@@ -562,22 +569,49 @@ footer {
   color: #f7f7f7;
 }
 @media (max-width: 576px) {
- .fix-header {
-  font-size: xx-small;
- }
-  .navbar ul li {
-    margin-right: 5px;
+  .menu-btn {
+    display: block;
+  }
+  .menu-btn:hover {
+    opacity: 0.5;
+  }
+  .navbar ul.main-menu {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: var(--bg-color);
+    width: 100%;
+  
+    transform: translateX(500px);
+    border-right: #ccc 1px solid;
+    opacity: 0.9;
+    padding: 30px;
+    transition: 0.5s transform;
+  }
+
+  .navbar ul.main-menu.show {
+    transform: translateX(45px);
+  }
+  .fix-header {
+    font-size: xx-small;
+  }
+  .navbar ul.main-menu li {
+    padding: 10px;
+    border-bottom: var(--white-color) solid 1px;
+  }
+  .navbar ul.main-menu li:last-child {
+    border-bottom: 0;
   }
   .navbar-two {
-  display: none;
+    display: none;
   }
-  .where-teams{
+  .where-teams {
     padding-top: 6rem;
   }
   .skills-head ul li {
     margin-right: 7px;
   }
-  
 
   .skills-head {
     align-items: center;
@@ -598,7 +632,7 @@ footer {
     font-size: 20px;
   }
 
-  .languages-logo  {
+  .languages-logo {
     flex-wrap: wrap;
   }
 
@@ -607,12 +641,14 @@ footer {
   }
 
   .brands {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    padding-top: 2rem;
   }
   .brands img {
-    height: 20px;
+    height: 30px;
   }
-  .upskill{
+
+  .upskill {
     padding: 10px;
   }
 
@@ -630,7 +666,7 @@ footer {
   .footer-case {
     grid-template-columns: repeat(1, 1fr);
   }
-  
+
   .upskill-left h1 {
     font-size: 30px;
   }
@@ -642,7 +678,7 @@ footer {
     padding: 3rem;
   }
   .contact-case {
-    grid-template-columns: repeat(1, 390px);
+    grid-template-columns: repeat(1, 360px);
     padding-top: 10px;
   }
 
@@ -733,11 +769,11 @@ footer {
   .card-text h1 {
     font-size: 20px;
   }
-  .languages-logo  {
+  .languages-logo {
     flex-wrap: wrap;
   }
-  .languages-logo div  {
-    margin-top: 13px ;
+  .languages-logo div {
+    margin-top: 13px;
   }
 
   .brands {
@@ -845,21 +881,25 @@ footer {
   .card-text h1 {
     font-size: 20px;
   }
-  .languages-logo  {
+  .languages-logo {
     flex-wrap: wrap;
   }
-  .languages-logo div{
+  .languages-logo div {
     margin-top: 2rem;
   }
-  .languages-logo div  a {
+  .languages-logo div a {
     margin: 13px 10px;
   }
 
   .brands img {
     height: 20px;
   }
-.upskill{
+  .upskill {
     padding: 10px;
+  }
+
+  .upskill p {
+    font-size: 20px;
   }
   #order-skill {
     order: 1;
@@ -907,6 +947,12 @@ footer {
   }
   .course-case {
     padding-top: 0;
+  }
+  .percentages p {
+    font-size: x-large;
+  }
+  .percentages img {
+    width: 320px;
   }
 
   .platform-cards {
