--- a/css/styles.css
+++ b/css/styles.css
@@ -467,7 +467,7 @@ footer {
 
 .footer-case {
   display: grid;
-  grid-template-columns: repeat(5, 200px);
+  grid-template-columns: repeat(5, 1fr);
   padding-bottom: 4rem;
   border-bottom: 1px solid rgb(96, 96, 143);
 }
@@ -493,10 +493,12 @@ footer {
   align-items: center;
   color: var(--white-color);
   padding: 50px 0;
+
 }
 .footer-image {
   display: flex;
-  align-items: center;
+  align-items: center; 
+   padding-left: 2.5rem;
 }
 
 .footer-header h6 {
@@ -662,10 +664,11 @@ footer {
   .footer-end {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 20px 20px;
+    padding: 20px 40px;
   }
   .footer-image {
     padding-bottom: 12px;
+    padding-left: 0px;
   }
 
   .newsletter {
@@ -768,10 +771,11 @@ footer {
   .footer-end {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 20px 20px;
+    padding: 20px 40px;
   }
   .footer-image {
     padding-bottom: 12px;
+    padding-left: 0;
   }
 
   .newsletter {
@@ -779,7 +783,7 @@ footer {
   }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 767px) and (max-width: 992px) {
   .navbar ul li {
     margin-right: 9px;
   }
@@ -880,10 +884,11 @@ footer {
   .footer-end {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    padding: 20px 20px;
+    padding: 20px 40px;
   }
   .footer-image {
     padding-bottom: 12px;
+    padding-left: 0;
   }
 
   .newsletter {
